--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Android Tour Application</string>
+    <string name="background_image">Background image</string>
+    <string name="logo_image">Logo image</string>
+    <string name="desired_league">Desired league</string>
+    <string name="mens">Mens</string>
+    <string name="woman">Woman</string>
+    <string name="co_ed">Co-ed</string>
+    <string name="next">Next</string>
 </resources>
