--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="woman">Woman</string>
     <string name="co_ed">Co-ed</string>
     <string name="next">Next</string>
+    <string name="go_all_in">GO ALL IN</string>
+    <string name="on_going_all_out">ON GOING ALL OUT</string>
+    <string name="welcome_description">Find a team in your city and dominate the league</string>
+    <string name="get_started">Get started</string>
 </resources>
