--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="on_going_all_out">ON GOING ALL OUT</string>
     <string name="welcome_description">Find a team in your city and dominate the league</string>
     <string name="get_started">Get started</string>
+    <string name="i_am_a">I am a:</string>
+    <string name="girl">GIRL</string>
+    <string name="boy">BOY</string>
+    <string name="finish">Finish</string>
 </resources>
