Buttoning up the Activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="logo_image">Logo image</string>
     <string name="desired_league">Desired league</string>
     <string name="mens">Mens</string>
-    <string name="woman">Woman</string>
+    <string name="women">Women</string>
     <string name="co_ed">Co-ed</string>
     <string name="next">Next</string>
     <string name="go_all_in">GO ALL IN</string>
