--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="beginer">BEGINER</string>
     <string name="baller">BALLER</string>
     <string name="finish">Finish</string>
+    <string name="category">Category</string>
 </resources>
