--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="baller">BALLER</string>
     <string name="finish">Finish</string>
     <string name="category">Category</string>
+    <string name="product">Product</string>
 </resources>
