--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="finish">Finish</string>
     <string name="category">Category</string>
     <string name="product">Product</string>
+    <string name="textview">TextView</string>
 </resources>
